barkov_lab3 update